--- a/mockoon/hotel_app.json
+++ b/mockoon/hotel_app.json
@@ -11,7 +11,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "example": "[\r\n  {\r\n    \"id\": 3,\r\n    \"guestName\": \"admin\",\r\n    \"guestEmail\": \"admin@test.com\",\r\n    \"roomNumber\": 50,\r\n    \"checkInDate\": \"2025-01-10\",\r\n    \"checkOutDate\": \"2025-01-10\"\r\n  }\r\n]\r\n"
+                "example": "[\r\n  {\r\n    \"id\": 1,\r\n    \"guestName\": \"tester\",\r\n    \"guestEmail\": \"test@test.com\",\r\n    \"roomNumber\": 100,\r\n    \"checkInDate\": \"2024-01-10\",\r\n    \"checkOutDate\": \"2024-01-10\"\r\n  },\r\n  {\r\n    \"id\": 2,\r\n    \"guestName\": \"james\",\r\n    \"guestEmail\": \"james@test.com\",\r\n    \"roomNumber\": 10,\r\n    \"checkInDate\": \"2025-01-10\",\r\n    \"checkOutDate\": \"2025-01-10\"\r\n  },\r\n  {\r\n    \"id\": 3,\r\n    \"guestName\": \"admin\",\r\n    \"guestEmail\": \"admin@test.com\",\r\n    \"roomNumber\": 50,\r\n    \"checkInDate\": \"2025-01-10\",\r\n    \"checkOutDate\": \"2025-01-10\"\r\n  }\r\n]\r\n"
               }
             },
             "headers": {
@@ -104,11 +104,7 @@
         "responses": {
           "200": {
             "description": "",
-            "content": {
-              "application/json": {
-                "example": "  {\r\n    \"id\": 3,\r\n    \"guestName\": \"admin\",\r\n    \"guestEmail\": \"admin@test.com\",\r\n    \"roomNumber\": 50,\r\n    \"checkInDate\": \"2025-01-10\",\r\n    \"checkOutDate\": \"2025-01-10\"\r\n  }"
-              }
-            },
+            "content": { "application/json": { "example": {} } },
             "headers": {
               "Access-Control-Allow-Origin": {
                 "schema": { "type": "string" },
